--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rneui/themed": "^4.0.0-rc.5",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.9.0",
     "react": "17.0.2",
@@ -26,8 +27,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
-    "expo-splash-screen": "~0.15.1"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
