--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.0",
+    "axios": "^0.27.2",
+    "cache-manager": "^4.1.0",
+    "cache-manager-ioredis": "^2.1.0",
+    "js-yaml": "^4.1.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -36,8 +40,11 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cache-manager": "^4.0.1",
+    "@types/cache-manager-ioredis": "^2.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
