--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "cache-manager-ioredis": "^2.1.0",
     "js-yaml": "^4.1.0",
     "mysql2": "^2.3.3",
+    "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
