--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
+    "react-native-walkthrough-tooltip": "^1.4.0",
     "react-native-web": "0.17.7",
     "react-native-webview": "^11.23.1",
     "react-redux": "^8.0.2",
