--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-animatable": "^1.3.3",
+    "react-native-dialog": "^9.2.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.0.0",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
