--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-calendars": "^1.1290.0",
     "react-native-dialog": "^9.2.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.6.0",
@@ -42,7 +43,8 @@
     "react-native-web": "0.17.7",
     "react-native-webview": "^11.23.1",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
