--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.6",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
@@ -37,7 +38,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-screens": "^3.18.2",
     "react-native-tab-view": "^3.1.1",
     "react-native-walkthrough-tooltip": "^1.4.0",
     "react-native-web": "0.17.7",
