--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
+    "dayjs": "^1.11.6",
     "js-yaml": "^4.1.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
