--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-base64": "^0.2.1",
+    "react-native-bootpay-api": "^4.2.6",
     "react-native-calendars": "^1.1290.0",
+    "react-native-device-info": "^10.3.0",
     "react-native-dialog": "^9.2.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.6.0",
@@ -39,10 +42,12 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "^3.18.2",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-tab-view": "^3.1.1",
     "react-native-walkthrough-tooltip": "^1.4.0",
     "react-native-web": "0.17.7",
     "react-native-webview": "^11.23.1",
+    "react-native-webview-bootpay": "^11.22.87",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.3"
