--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,8 @@
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dayjs": "^1.11.6",
     "js-yaml": "^4.1.0",
     "mysql2": "^2.3.3",
