--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.6",
     "js-yaml": "^4.1.0",
+    "mongodb": "^5.0.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -100,6 +101,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
+    ]
   }
 }
