modify: reflect-metadta 각 파일에 import로 변경
package.json -> 각 파일

--- a/backend/package.json
+++ b/backend/package.json
@@ -100,9 +100,6 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest.setup.ts"
-    ]
+    "testEnvironment": "node"
   }
 }
